--- a/spring-app/src/main/resources/application.properties
+++ b/spring-app/src/main/resources/application.properties
@@ -2,10 +2,9 @@
 server.port=8080
 
 # -- Postgresql database --
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewizitingDB
+spring.datasource.url=jdbc:postgresql://localhost:5444/keycloak
 spring.datasource.username=admin
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create
 
 # -- Keycloak --
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/test-app
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/rekod-saya
